# kindle-family-board

./: .env.example  .gitignore  ORCHESTRATOR.md  README.md  board-2026-03-18.json  board-2026-03-19.json  index.html  pyproject.toml
.github/workflows/: publish-board.yml
data/: easy_words.txt  fallback_readings.json  kind_messages.txt  reading_carousel.md
docs/: design-plan.md  kindle-recovery-handoff.md  stories.txt
kindle/: board.env.example  board_screensaver_watchdog.sh  boot_reseed.sh  daily_wake_scheduler.sh  familyboard_kual.sh  fetch_and_display.sh  install_cron.sh  install_normal_screensavers.sh  linkss_emergency.sh  one_shot_screensaver_refresh.sh  one_shot_wake_test.sh  persist_morning_screensaver.sh  restore_after_delay.sh  restore_screensavers.sh  run_morning_board.sh  start_board_watchdog.sh  start_daily_wake_scheduler.sh  stop_board_watchdog.sh  stop_daily_wake_scheduler.sh  stop_restore_after_delay.sh
kindle/kual/familyboard/: config.xml  menu.json
scripts/: arm_wake_test.py  build_site.py  deploy_to_kindle.py  generate_board.py  install_windows_tasks.ps1  preview_icon_styles.py  process_download_screensavers.py  publish_gh_pages.py  serve_output.py  test_restore_cycle.py
src/kindle_family_board/: __init__.py  config.py  content.py  gemini.py  kindle.py  models.py  pipeline.py  render.py  runtime.py  weather.py
